code/python/SecuritizedDerivativesAPIforDigitalPortals/v4/docs/InlineResponse2005DataKnockIn.md
# InlineResponse2005DataKnockIn

Values and value ranges related to the knock-in.

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**observation** | [**[PostSecuritizedDerivativeNotationScreenerValueRangesGetDataKnockInObservationItems]**](PostSecuritizedDerivativeNotationScreenerValueRangesGetDataKnockInObservationItems.md) | Values of the barrier observation modality. | [optional] 
**value** | [**InlineResponse2005DataKnockInValue**](InlineResponse2005DataKnockInValue.md) |  | [optional] 
**distance** | [**InlineResponse2005DataKnockInDistance**](InlineResponse2005DataKnockInDistance.md) |  | [optional] 
**breached** | [**[PostSecuritizedDerivativeNotationScreenerValueRangesGetDataKnockInBreachedItems]**](PostSecuritizedDerivativeNotationScreenerValueRangesGetDataKnockInBreachedItems.md) | Indicates whether securitized derivatives with a breached and with a non-breached knock-in barrier are among the results. | [optional] 
**cash_flow** | [**InlineResponse2005DataKnockInCashFlow**](InlineResponse2005DataKnockInCashFlow.md) |  | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


